[gd_scene load_steps=2 format=3 uid="uid://egy8w3o8l7o"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_5iwmq"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5iwmq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ChangeTimeScaleButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Change Time Scale"

[node name="MenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ChangeTimeScaleButton" to="." method="_on_change_time_scale_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
